--- a/train.ipynb
+++ b/train.ipynb
@@ -655,7 +655,7 @@
       },
       "outputs": [],
       "source": [
-        "#@title メモリの開放 / Release memory (optional)\n",
+        "# Release memory (optional)\n",
         "\n",
         "del pipe\n",
         "del orig_unet\n",
