--- a/demo.ipynb
+++ b/demo.ipynb
@@ -126,10 +126,10 @@
       "outputs": [],
       "source": [
         "mode = 'erase_with_la' #@param [\"erase_with_la\", \"erase\"]\n",
-        "dim = 1\n",
-        "sampling_batch_size = 4\n",
-        "la_strength = 1000\n",
-        "erasing_scale = 1.0"
+        "dim = 1 #@param {type: \"number\"}\n",
+        "sampling_batch_size = 4 #@param {type: \"number\"}\n",
+        "la_strength = 1000 #@param {type: \"number\"}\n",
+        "erasing_scale = 1.0 #@param {type: \"number\"}"
       ]
     },
     {
@@ -181,7 +181,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "wandb_token = \"eefa265e94ac44f46c6a1b0d0854e247474f83d1\" #@param {type: \"string\"}\n",
+        "wandb_token = \"\" #@param {type: \"string\"}\n",
         "\n",
         "prompts_to_visualize = [\"dog\", \"mickey\", \"woman\"]  #@param {type: \"string\"}\n",
         "generate_num = 2  #@param {type: \"number\"}\n",
